--- a/New_model/personwb_eg.html
+++ b/New_model/personwb_eg.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>LihuaPei_Blog</title>
-    <link href="扁平化个人blog.css" type="text/css" rel="stylesheet">
+    <link href="blog.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 <div class="main">
