--- a/New_model/personwb_eg.html
+++ b/New_model/personwb_eg.html
@@ -11,19 +11,19 @@
 <nav>
     <ul>
         <li class="logo1"><a href="#">Lihua Pei</a></li>
-        <li><a href="#">联系我</a></li>
-        <li><a href="#">关注我</a></li>
-        <li><a href="#">赞赏我</a></li>
-        <li><a href="#">首页</a></li>
+        <li><a href="#">Contact Me</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">About Me</a></li>
+        <li><a href="#">Home</a></li>
     </ul>
 </nav><!--设置导航栏-->
 <div id="banner">
     <div class="center1">
         <h1>Lihua Pei (Neo)</h1>
-        <p>welcome to Lihua Pei's profolio pages,Thank you.</p>
-        <button>了解我</button>
+        <p>Welcome to Lihua Pei's protfolio pages,Thank you.</p>
+        <button>Know about me</button>
         <div class="more">
-            <a href="#center">更多</a>
+            <a href="#center">More</a>
         </div>
     </div>
     <a name="center"></a>
@@ -32,7 +32,7 @@
 <div class="content">
     <section class="green-area">
         <div class="biaoti">
-            <h2>这是我</h2>
+            <h2>This is me</h2>
             <div class="hr"></div>
             <p>我是一个喜欢写博客，爱吃美食，喜欢旅游的男孩，我热爱这个世界，热爱这里</p>
         </div>
@@ -45,24 +45,24 @@
     <section class="gray-area">
         <div class="one">
             <div class="img">
-                 <img src="two.jpg">
+                 <img src="3DAlg.jpg">
             </div>
-            <h2>行走世界</h2>
-            <p>我喜欢走走看看这个世界，小居生活的美好，尽在眼前</p>
+            <h2>PMM</h2>
+            <p>Analysis Of Parallel Matrix Multiplication Algorithms</p>
         </div>
         <div class="two">
             <div class="img2">
-                <img src="three.jpg">
+                <img src="Scheduling_Process.png">
             </div>
-            <h2>火车街头</h2>
-            <p>火车的街头，暗黑的黎明，没有人会拒绝任何喧嚣</p>
+            <h2>Computer Coin Developing</h2>
+            <p>Scheduling Project Design</p>
         </div>
         <div class="three">
             <div class="img3">
-                <img src="four.jpg">
+                <img src="methods_group1.png">
             </div>
-            <h2>远看世界</h2>
-            <p>看看世界，寻找世界的奇迹，走一走</p>
+            <h2>Optimal Topologies Searching Research</h2>
+
         </div>
     </section>
     <section class="jianjie">
@@ -107,7 +107,7 @@
             <li><img src="付款.png"></li>
         </ul>
         <div class="last">
-            <span>&copy 许林杰-2017</span>
+            <span>Lihua Pei-2018</span>
         </div>
 </footer><!--页脚-->
 </div>
