--- a/New_model/personwb_eg.html
+++ b/New_model/personwb_eg.html
@@ -20,7 +20,7 @@
 <div id="banner">
     <div class="center1">
         <h1>Lihua Pei (Neo)</h1>
-        <p>Welcome to Lihua Pei's protfolio pages,Thank you.</p>
+        <p>Welcome to Lihua Pei's Protfolio Pages,Thank You.</p>
         <button>Know about me</button>
         <div class="more">
             <a href="#center">More</a>
