--- a/New_model/personwb_eg.html
+++ b/New_model/personwb_eg.html
@@ -10,11 +10,11 @@
 <header>
 <nav>
     <ul>
-        <li class="logo1"><a href="#">Lihua Pei</a></li>
-        <li><a href="#">Contact Me</a></li>
+        <li class="logo1"><a href="https://lihuapeineo.github.io/New_model/personwb_eg.html">Lihua Pei</a></li>
+        <li><a href="https://lihuapeineo.github.io/pages/about.html">Contact Me</a></li>
         <li><a href="#">Projects</a></li>
-        <li><a href="#">About Me</a></li>
-        <li><a href="#">Home</a></li>
+        <li><a href="https://lihuapeineo.github.io/pages/about.html">About Me</a></li>
+        <li><a href="https://lihuapeineo.github.io/New_model/personwb_eg.html">Home</a></li>
     </ul>
 </nav><!--设置导航栏-->
 <div id="banner">
@@ -23,7 +23,7 @@
         <p>Welcome to Lihua Pei's Protfolio Pages,Thank You.</p>
         <button>Know about me</button>
         <div class="more">
-            <a href="#center">More</a>
+            <a href="https://lihuapeineo.github.io/pages/about.html">More</a>
         </div>
     </div>
     <a name="center"></a>
@@ -36,30 +36,40 @@
             <div class="hr"></div>
             <p>我是一个喜欢写博客，爱吃美食，喜欢旅游的男孩，我热爱这个世界，热爱这里</p>
         </div>
+        <!--
         <div class="tubiao">
-            <span class="item">item</span>
-            <span class="item">item</span>
+
+            <span class="item">Data Analysis</span>
+            <span class="item">Data Visualization</span>
             <span class="item">item</span>
         </div>
+        -->
     </section>
     <section class="gray-area">
         <div class="one">
             <div class="img">
+              <a href="https://LihuaPeiNeo.github.io/Matrix_Paper/PMM_Represent">
                  <img src="3DAlg.jpg">
+                 
+
             </div>
             <h2>PMM</h2>
             <p>Analysis Of Parallel Matrix Multiplication Algorithms</p>
         </div>
         <div class="two">
             <div class="img2">
+              <a href="https://LihuaPeiNeo.github.io/Scheduling_Process/SP_Represent">
                 <img src="Scheduling_Process.png">
+
             </div>
             <h2>Computer Coin Developing</h2>
             <p>Scheduling Project Design</p>
         </div>
         <div class="three">
             <div class="img3">
+              <a href="https://LihuaPeiNeo.github.io/Topology/Topology_Repersent">
                 <img src="methods_group1.png">
+
             </div>
             <h2>Optimal Topologies Searching Research</h2>
 
