--- a/New_model/personwb_eg.html
+++ b/New_model/personwb_eg.html
@@ -34,7 +34,11 @@
         <div class="biaoti">
             <h2>This is me</h2>
             <div class="hr"></div>
-            <p>我是一个喜欢写博客，爱吃美食，喜欢旅游的男孩，我热爱这个世界，热爱这里</p>
+            <p>My name is Lihua (Neo) Pei. Currently I am a graduate student
+              studying at the George Washington University majored in Data Analytics.</p>
+            <p>I am enthusiastic about researches and studies which related to statistics,
+              data analytics, and management of databases.</p>
+            
         </div>
         <!--
         <div class="tubiao">
@@ -50,7 +54,7 @@
             <div class="img">
               <a href="https://LihuaPeiNeo.github.io/Matrix_Paper/PMM_Represent">
                  <img src="3DAlg.jpg">
-                 
+
 
             </div>
             <h2>PMM</h2>
