--- a/New_model/personwb_eg.html
+++ b/New_model/personwb_eg.html
@@ -31,6 +31,10 @@
 
 <div class="content">
     <section class="green-area">
+        <div class = "img4">
+          <img src = "Lihua1.jpg">
+        </div>
+         
         <div class="biaoti">
             <h2>This is me</h2>
             <div class="hr"></div>
@@ -38,7 +42,7 @@
               studying at the George Washington University majored in Data Analytics.</p>
             <p>I am enthusiastic about researches and studies which related to statistics,
               data analytics, and management of databases.</p>
-            
+
         </div>
         <!--
         <div class="tubiao">
@@ -82,12 +86,12 @@
     <section class="jianjie">
         <div class="rongqi">
         <div class="jianjie2">
-            <h2>不约</h2>
+            <h2>My Skills</h2>
             <div class="hr">
 
             </div>
             <div class="sub-heading">
-                <p>welcome to XuLinJie_blog,Thank you.I'will paldsjsd sdnjks sndlk sdjsdsndjnjsndsd  dksjdksfd df dfdsw</p>
+                <p>Welcome to,Thank you.I'will paldsjsd sdnjks sndlk sdjsdsndjnjsndsd  dksjdksfd df dfdsw</p>
             </div>
             </div>
             <div class="card">
