--- a/New_model/personwb_eg.html
+++ b/New_model/personwb_eg.html
@@ -34,12 +34,13 @@
         <div class = "img4">
           <img src = "Lihua1.jpg">
         </div>
-         
+
         <div class="biaoti">
             <h2>This is me</h2>
             <div class="hr"></div>
-            <p>My name is Lihua (Neo) Pei. Currently I am a graduate student
-              studying at the George Washington University majored in Data Analytics.</p>
+            <p>My name is Lihua (Neo) Pei.</p>
+            <p>Currently I am a graduate student studying at the George Washington University</p>
+            <p>majored in Data Analytics.</p>
             <p>I am enthusiastic about researches and studies which related to statistics,
               data analytics, and management of databases.</p>
 
