--- a/New_model/personwb_eg.html
+++ b/New_model/personwb_eg.html
@@ -23,7 +23,7 @@
         <p>Welcome to Lihua Pei's Protfolio Pages,Thank You.</p>
         <button>Know about me</button>
         <div class="more">
-            <a href="https://lihuapeineo.github.io/pages/about.html">More</a>
+            <a href="#center">More</a>
         </div>
     </div>
     <a name="center"></a>
@@ -43,6 +43,11 @@
             <p>majored in Data Analytics.</p>
             <p>I am enthusiastic about researches and studies which related to statistics,
               data analytics, and management of databases.</p>
+            <p>   </p>
+            <p>   </p>
+            <p>   </p>
+            <p>   </p>
+            <p>please be free to click the pictures blow to enter my project introductions.<p>
 
         </div>
         <!--
@@ -58,7 +63,7 @@
         <div class="one">
             <div class="img">
               <a href="https://LihuaPeiNeo.github.io/Matrix_Paper/PMM_Represent">
-                 <img src="3DAlg.jpg">
+                 <img src="PMM.png">
 
 
             </div>
