--- a/New_model/personwb_eg.html
+++ b/New_model/personwb_eg.html
@@ -96,20 +96,19 @@
             <div class="hr">
 
             </div>
-            <div class="sub-heading">
-                <p>Welcome to,Thank you.I'will paldsjsd sdnjks sndlk sdjsdsndjnjsndsd  dksjdksfd df dfdsw</p>
+
             </div>
-            </div>
+
             <div class="card">
-                <h3>精通HTML5</h3>
+                <h3>Python</h3>
                 <p>iweiw wje oj rjoe oejfoejoej  feof oejf oeofejf oje ojfeoj oej ojfo jof sdsdsddqwwfddfdfsdfwefwdf ff</p>
             </div>
             <div class="card">
-                <h3>精通C++</h3>
+                <h3>C++</h3>
                 <p>iweiw wje oj rjoe oejfoejoej  feof oejf oeofejf oje ojfeoj oej ojfo jofof sdsdsddqwwfddfdfsdfwefwdf </p>
             </div>
             <div class="card">
-                <h3>熟练php</h3>
+                <h3>Html</h3>
                 <p>iweiw wje oj rjoe oejfoejoej  feof oejf oeofejf oje ojfeoj oej ojfo jofof sdsdsddqwwfddfdfsdfwefwdf </p>
             </div>
             <div class="card">
