--- a/New_model/personwb_eg.html
+++ b/New_model/personwb_eg.html
@@ -39,14 +39,16 @@
             <h2>This is me</h2>
             <div class="hr"></div>
             <p>My name is Lihua (Neo) Pei.</p>
+            <br  /><br  />
             <p>Currently I am a graduate student studying at the George Washington University</p>
             <p>majored in Data Analytics.</p>
+            <br  /><br  />
             <p>I am enthusiastic about researches and studies which related to statistics,
               data analytics, and management of databases.</p>
-            <p>   </p>
-            <p>   </p>
-            <p>   </p>
-            <p>   </p>
+            <br  /><br  />
+            <br  /><br  />
+            <br  /><br  />
+
             <p>please be free to click the pictures blow to enter my project introductions.<p>
 
         </div>
@@ -112,7 +114,7 @@
                 <p>iweiw wje oj rjoe oejfoejoej  feof oejf oeofejf oje ojfeoj oej ojfo jofof sdsdsddqwwfddfdfsdfwefwdf </p>
             </div>
             <div class="card">
-                <h3>熟练Linux</h3>
+                <h3>Photoshop</h3>
                 <p>iweiw wje oj rjoe oejfoejoej  feof oejf oeofejf oje ojfeoj oej ojfo jofof sdsdsddqwwfddfdfsdfwefwdf f fd</p>
             </div>
         </div>
