--- a/Fresh_Air_DC/Air DC Web/Air_DC.HTML
+++ b/Fresh_Air_DC/Air DC Web/Air_DC.HTML
@@ -92,7 +92,7 @@
               <h4><a href="https://www.seas.gwu.edu/royce-francis">Prof.Royce Francis</a></h4>
 
               <p>Dr. Francis is a member of the Association for Environmental Engineering and Science Professors, the American Society of Civil Engineers, and the Society for Risk Analysis where he serves as the 2012 Engineering Infrastructure Specialty Group (EISG) Chair.</p>
-           
+           </div>
            <div class="skill-row">
               <img class="Lihua_Head" src="Lihua_Pei.jpg" alt="Lihua_Head">
       
