--- a/Fresh_Air_DC/Air DC Web/Air_DC.HTML
+++ b/Fresh_Air_DC/Air DC Web/Air_DC.HTML
@@ -38,17 +38,13 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#footer">About Us</a>
+              <a class="nav-link" href="https://github.com/LihuaPeiNeo/LihuaPeiNeo.github.io/blob/master/Fresh_Air_DC/Fresh%20Air%20DC%20Fall%202019-converted.pdf">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#pricing">Data</a>
+              <a class="nav-link" href="https://github.com/LihuaPeiNeo/Fresh_Air_DC_neo">Documentations</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://www.uradmonitor.com/products/">Monitors</a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link" href="file:///Users/neopei/Desktop/Web%20学习/Air%20DC%20Web/Group.HTML">Group</a>
             </li>
             
           </ul>
@@ -116,7 +112,7 @@
            <h2>Get In Touch</h2>
            <h3>If you want to make air fresh in DC.</h3>
            <p class="contact-message">Keep our children away from pollution and monitor our air quilty</p>
-           <a class="btn" href="seed@email.gwu.edu">CONTACT ME</a>
+           <a class="btn" href="seed@email.gwu.edu">CONTACT US</a>
          </div>
 
       </div>
